@@ -1,2 +1,2 @@
 # pas3
- 
+--module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml,javafx.web
